--- a/css/style.css
+++ b/css/style.css
@@ -188,3 +188,66 @@ p {
     width: 75%;
     height: 70%;
 }
+
+.content-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Sección principal del simulador */
+.main-section {
+    width: 65%;
+}
+
+/* Sección de artistas */
+.artists-section {
+    width: 30%;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.artists-section h2 {
+    text-align: center;
+}
+
+#artists-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.artist-card {
+    background-color: white;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.artist-card img {
+    width: 100%;
+    border-radius: 8px;
+}
+
+.artist-card h3 {
+    margin: 10px 0;
+}
+
+.artist-card p {
+    margin: 0;
+}
+
+.artist-card a {
+    display: inline-block;
+    padding: 8px 12px;
+    background-color: #007BFF;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.artist-card a:hover {
+    background-color: #0056b3;
+}
