--- a/css/style.css
+++ b/css/style.css
@@ -117,10 +117,9 @@ p {
     padding: 40px 20px;
 }
 
-.artists-section {
+.apod-section {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    flex-direction: column;
     padding: 20px;
 }
 
@@ -199,17 +198,18 @@ p {
     width: 65%;
 }
 
-/* Sección de artistas */
-.artists-section {
-    width: 30%;
+/* Sección de apod */
+.apod-section {
+    width:25%;
     padding: 20px;
     background-color: #f5f5f5;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.artists-section h2 {
+.apod-section h2 {
     text-align: center;
+    padding-bottom: 30px;
 }
 
 #artists-container {
@@ -219,35 +219,52 @@ p {
 }
 
 .artist-card {
-    background-color: white;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+    text-align: center;
+    width: 220px;
+    overflow: hidden;
 }
 
 .artist-card img {
-    width: 100%;
-    border-radius: 8px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 15px;
 }
 
 .artist-card h3 {
-    margin: 10px 0;
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    color: #333;
 }
 
 .artist-card p {
-    margin: 0;
+    font-size: 1rem;
+    color: #555;
 }
 
 .artist-card a {
     display: inline-block;
-    padding: 8px 12px;
+    padding: 8px 15px;
     background-color: #007BFF;
     color: white;
-    text-decoration: none;
     border-radius: 5px;
-    margin-top: 10px;
+    text-decoration: none;
+    margin-top: 15px;
 }
 
 .artist-card a:hover {
     background-color: #0056b3;
+}
+
+/* Efecto hover para las cards */
+.artist-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
